Mock the GetItem call to test the updating
Signed-off-by: Daniel Widdis <widdis@gmail.com>