@@ -16,6 +16,7 @@ import static org.opensearch.ml.plugin.MachineLearningPlugin.ML_THREAD_POOL_PREF
 
 import java.io.IOException;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.Map;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.CompletionException;
@@ -66,8 +67,6 @@ import org.opensearch.threadpool.ScalingExecutorBuilder;
 import org.opensearch.threadpool.TestThreadPool;
 import org.opensearch.threadpool.ThreadPool;
 
-import com.google.common.collect.ImmutableMap;
-
 import software.amazon.awssdk.services.dynamodb.DynamoDbClient;
 import software.amazon.awssdk.services.dynamodb.model.AttributeValue;
 import software.amazon.awssdk.services.dynamodb.model.ConditionalCheckFailedException;
@@ -85,6 +84,7 @@ public class DDBOpenSearchClientTests extends OpenSearchTestCase {
     private static final String RANGE_KEY = "_id";
     private static final String HASH_KEY = "_tenant_id";
     private static final String SEQ_NUM = "_seq_no";
+    private static final String SOURCE = "_source";
 
     private static final String TEST_ID = "123";
     private static final String TENANT_ID = "TEST_TENANT_ID";
@@ -162,7 +162,7 @@ public class DDBOpenSearchClientTests extends OpenSearchTestCase {
         Assert.assertEquals(TEST_ID, putItemRequest.item().get(RANGE_KEY).s());
         Assert.assertEquals(TENANT_ID, putItemRequest.item().get(HASH_KEY).s());
         Assert.assertEquals("0", putItemRequest.item().get(SEQ_NUM).n());
-        Assert.assertEquals("foo", putItemRequest.item().get("_source").m().get("data").s());
+        Assert.assertEquals("foo", putItemRequest.item().get(SOURCE).m().get("data").s());
     }
 
     @Test
@@ -176,7 +176,7 @@ public class DDBOpenSearchClientTests extends OpenSearchTestCase {
             .build();
         Mockito
             .when(dynamoDbClient.getItem(Mockito.any(GetItemRequest.class)))
-            .thenReturn(GetItemResponse.builder().item(ImmutableMap.of(SEQ_NUM, AttributeValue.builder().n("5").build())).build());
+            .thenReturn(GetItemResponse.builder().item(Map.of(SEQ_NUM, AttributeValue.builder().n("5").build())).build());
         Mockito.when(dynamoDbClient.putItem(Mockito.any(PutItemRequest.class))).thenReturn(PutItemResponse.builder().build());
         PutDataObjectResponse response = sdkClient
             .putDataObjectAsync(putRequest, testThreadPool.executor(GENERAL_THREAD_POOL))
@@ -201,7 +201,7 @@ public class DDBOpenSearchClientTests extends OpenSearchTestCase {
             .build();
         Mockito
             .when(dynamoDbClient.getItem(Mockito.any(GetItemRequest.class)))
-            .thenReturn(GetItemResponse.builder().item(ImmutableMap.of(SEQ_NUM, AttributeValue.builder().n("5").build())).build());
+            .thenReturn(GetItemResponse.builder().item(Map.of(SEQ_NUM, AttributeValue.builder().n("5").build())).build());
         Mockito.when(dynamoDbClient.putItem(Mockito.any(PutItemRequest.class))).thenReturn(PutItemResponse.builder().build());
         CompletableFuture<PutDataObjectResponse> response = sdkClient
             .putDataObjectAsync(putRequest, testThreadPool.executor(GENERAL_THREAD_POOL))
@@ -231,14 +231,14 @@ public class DDBOpenSearchClientTests extends OpenSearchTestCase {
         sdkClient.putDataObjectAsync(putRequest, testThreadPool.executor(GENERAL_THREAD_POOL)).toCompletableFuture().join();
         Mockito.verify(dynamoDbClient).putItem(putItemRequestArgumentCaptor.capture());
         PutItemRequest putItemRequest = putItemRequestArgumentCaptor.getValue();
-        Assert.assertEquals("testString", putItemRequest.item().get("_source").m().get("testString").s());
-        Assert.assertEquals("123", putItemRequest.item().get("_source").m().get("testNumber").n());
-        Assert.assertEquals(true, putItemRequest.item().get("_source").m().get("testBool").bool());
-        Assert.assertEquals("123", putItemRequest.item().get("_source").m().get("testList").l().get(0).s());
-        Assert.assertEquals("hello", putItemRequest.item().get("_source").m().get("testList").l().get(1).s());
-        Assert.assertEquals(null, putItemRequest.item().get("_source").m().get("testList").l().get(2).s());
-        Assert.assertEquals("foo", putItemRequest.item().get("_source").m().get("testObject").m().get("data").s());
-        Assert.assertEquals(TENANT_ID, putItemRequest.item().get("_source").m().get(CommonValue.TENANT_ID).s());
+        Assert.assertEquals("testString", putItemRequest.item().get(SOURCE).m().get("testString").s());
+        Assert.assertEquals("123", putItemRequest.item().get(SOURCE).m().get("testNumber").n());
+        Assert.assertEquals(true, putItemRequest.item().get(SOURCE).m().get("testBool").bool());
+        Assert.assertEquals("123", putItemRequest.item().get(SOURCE).m().get("testList").l().get(0).s());
+        Assert.assertEquals("hello", putItemRequest.item().get(SOURCE).m().get("testList").l().get(1).s());
+        Assert.assertEquals(null, putItemRequest.item().get(SOURCE).m().get("testList").l().get(2).s());
+        Assert.assertEquals("foo", putItemRequest.item().get(SOURCE).m().get("testObject").m().get("data").s());
+        Assert.assertEquals(TENANT_ID, putItemRequest.item().get(SOURCE).m().get(CommonValue.TENANT_ID).s());
     }
 
     @Test
@@ -250,7 +250,7 @@ public class DDBOpenSearchClientTests extends OpenSearchTestCase {
 
         PutItemRequest putItemRequest = putItemRequestArgumentCaptor.getValue();
         Assert.assertEquals("DEFAULT_TENANT", putItemRequest.item().get(HASH_KEY).s());
-        Assert.assertNull(putItemRequest.item().get("_source").m().get(CommonValue.TENANT_ID));
+        Assert.assertNull(putItemRequest.item().get(SOURCE).m().get(CommonValue.TENANT_ID));
     }
 
     @Test
@@ -290,7 +290,7 @@ public class DDBOpenSearchClientTests extends OpenSearchTestCase {
                     .ofEntries(
                         Map
                             .entry(
-                                "_source",
+                                SOURCE,
                                 AttributeValue
                                     .builder()
                                     .m(Map.ofEntries(Map.entry("data", AttributeValue.builder().s("foo").build())))
@@ -334,7 +334,7 @@ public class DDBOpenSearchClientTests extends OpenSearchTestCase {
             .item(
                 Map
                     .ofEntries(
-                        Map.entry("_source", AttributeValue.builder().m(getComplexDataSource()).build()),
+                        Map.entry(SOURCE, AttributeValue.builder().m(getComplexDataSource()).build()),
                         Map.entry(SEQ_NUM, AttributeValue.builder().n("1").build())
                     )
             )
@@ -399,7 +399,7 @@ public class DDBOpenSearchClientTests extends OpenSearchTestCase {
         DeleteDataObjectRequest deleteRequest = DeleteDataObjectRequest.builder().id(TEST_ID).index(TEST_INDEX).tenantId(TENANT_ID).build();
         Mockito
             .when(dynamoDbClient.deleteItem(deleteItemRequestArgumentCaptor.capture()))
-            .thenReturn(DeleteItemResponse.builder().attributes(ImmutableMap.of(SEQ_NUM, AttributeValue.builder().n("5").build())).build());
+            .thenReturn(DeleteItemResponse.builder().attributes(Map.of(SEQ_NUM, AttributeValue.builder().n("5").build())).build());
         DeleteDataObjectResponse deleteResponse = sdkClient
             .deleteDataObjectAsync(deleteRequest, testThreadPool.executor(GENERAL_THREAD_POOL))
             .toCompletableFuture()
@@ -439,6 +439,21 @@ public class DDBOpenSearchClientTests extends OpenSearchTestCase {
             .retryOnConflict(1)
             .dataObject(testDataObject)
             .build();
+        GetItemResponse getItemResponse = GetItemResponse
+            .builder()
+            .item(
+                Map
+                    .ofEntries(
+                        Map.entry(SEQ_NUM, AttributeValue.builder().n("0").build()),
+                        Map
+                            .entry(
+                                SOURCE,
+                                AttributeValue.builder().m(Map.of("old_key", AttributeValue.builder().s("old_value").build())).build()
+                            )
+                    )
+            )
+            .build();
+        Mockito.when(dynamoDbClient.getItem(Mockito.any(GetItemRequest.class))).thenReturn(getItemResponse);
         Mockito.when(dynamoDbClient.updateItem(updateItemRequestArgumentCaptor.capture())).thenReturn(UpdateItemResponse.builder().build());
         UpdateDataObjectResponse updateResponse = sdkClient
             .updateDataObjectAsync(updateRequest, testThreadPool.executor(GENERAL_THREAD_POOL))
@@ -451,7 +466,7 @@ public class DDBOpenSearchClientTests extends OpenSearchTestCase {
         assertEquals(TEST_ID, updateItemRequest.key().get(RANGE_KEY).s());
         assertEquals(TENANT_ID, updateItemRequest.key().get(HASH_KEY).s());
         assertEquals("foo", updateItemRequest.expressionAttributeValues().get(":source").m().get("data").s());
-
+        assertEquals("old_value", updateItemRequest.expressionAttributeValues().get(":source").m().get("old_key").s());
     }
 
     @Test
@@ -465,9 +480,24 @@ public class DDBOpenSearchClientTests extends OpenSearchTestCase {
             .ifSeqNo(10)
             .ifPrimaryTerm(10)
             .build();
+        GetItemResponse getItemResponse = GetItemResponse
+            .builder()
+            .item(
+                Map
+                    .ofEntries(
+                        Map.entry(SEQ_NUM, AttributeValue.builder().n("0").build()),
+                        Map
+                            .entry(
+                                SOURCE,
+                                AttributeValue.builder().m(Map.of("old_key", AttributeValue.builder().s("old_value").build())).build()
+                            )
+                    )
+            )
+            .build();
+        Mockito.when(dynamoDbClient.getItem(Mockito.any(GetItemRequest.class))).thenReturn(getItemResponse);
         Mockito
             .when(dynamoDbClient.updateItem(updateItemRequestArgumentCaptor.capture()))
-            .thenReturn(UpdateItemResponse.builder().attributes(ImmutableMap.of(SEQ_NUM, AttributeValue.builder().n("5").build())).build());
+            .thenReturn(UpdateItemResponse.builder().attributes(Map.of(SEQ_NUM, AttributeValue.builder().n("5").build())).build());
         UpdateDataObjectResponse updateResponse = sdkClient
             .updateDataObjectAsync(updateRequest, testThreadPool.executor(GENERAL_THREAD_POOL))
             .toCompletableFuture()
@@ -482,10 +512,12 @@ public class DDBOpenSearchClientTests extends OpenSearchTestCase {
         assertTrue(updateItemRequest.expressionAttributeValues().containsKey(":incr"));
         assertTrue(updateItemRequest.expressionAttributeValues().containsKey(":source"));
         assertEquals("bar", updateItemRequest.expressionAttributeValues().get(":source").m().get("foo").s());
+        assertEquals("old_value", updateItemRequest.expressionAttributeValues().get(":source").m().get("old_key").s());
         assertTrue(updateItemRequest.expressionAttributeValues().containsKey(":currentSeqNo"));
         assertNotNull(updateItemRequest.conditionExpression());
         UpdateResponse response = UpdateResponse.fromXContent(updateResponse.parser());
         Assert.assertEquals(5, response.getSeqNo());
+
     }
 
     @Test
@@ -497,6 +529,17 @@ public class DDBOpenSearchClientTests extends OpenSearchTestCase {
             .tenantId(TENANT_ID)
             .dataObject(testDataObject)
             .build();
+        GetItemResponse getItemResponse = GetItemResponse
+            .builder()
+            .item(
+                Map
+                    .ofEntries(
+                        Map.entry(SEQ_NUM, AttributeValue.builder().n("0").build()),
+                        Map.entry(SOURCE, AttributeValue.builder().m(Collections.emptyMap()).build())
+                    )
+            )
+            .build();
+        Mockito.when(dynamoDbClient.getItem(Mockito.any(GetItemRequest.class))).thenReturn(getItemResponse);
         Mockito.when(dynamoDbClient.updateItem(updateItemRequestArgumentCaptor.capture())).thenReturn(UpdateItemResponse.builder().build());
         sdkClient.updateDataObjectAsync(updateRequest, testThreadPool.executor(GENERAL_THREAD_POOL)).toCompletableFuture().join();
         UpdateItemRequest updateItemRequest = updateItemRequestArgumentCaptor.getValue();
@@ -513,6 +556,17 @@ public class DDBOpenSearchClientTests extends OpenSearchTestCase {
             .ifPrimaryTerm(2)
             .build();
 
+        GetItemResponse getItemResponse = GetItemResponse
+            .builder()
+            .item(
+                Map
+                    .ofEntries(
+                        Map.entry(SEQ_NUM, AttributeValue.builder().n("0").build()),
+                        Map.entry(SOURCE, AttributeValue.builder().m(Collections.emptyMap()).build())
+                    )
+            )
+            .build();
+        Mockito.when(dynamoDbClient.getItem(Mockito.any(GetItemRequest.class))).thenReturn(getItemResponse);
         ConditionalCheckFailedException conflictException = ConditionalCheckFailedException.builder().build();
         when(dynamoDbClient.updateItem(updateItemRequestArgumentCaptor.capture())).thenThrow(conflictException);
 
@@ -536,6 +590,17 @@ public class DDBOpenSearchClientTests extends OpenSearchTestCase {
             .retryOnConflict(1)
             .dataObject(testDataObject)
             .build();
+        GetItemResponse getItemResponse = GetItemResponse
+            .builder()
+            .item(
+                Map
+                    .ofEntries(
+                        Map.entry(SEQ_NUM, AttributeValue.builder().n("0").build()),
+                        Map.entry(SOURCE, AttributeValue.builder().m(Collections.emptyMap()).build())
+                    )
+            )
+            .build();
+        Mockito.when(dynamoDbClient.getItem(Mockito.any(GetItemRequest.class))).thenReturn(getItemResponse);
         ConditionalCheckFailedException conflictException = ConditionalCheckFailedException.builder().build();
         // throw conflict exception on first time, return on second time
         Mockito
@@ -565,6 +630,17 @@ public class DDBOpenSearchClientTests extends OpenSearchTestCase {
             .retryOnConflict(1)
             .dataObject(testDataObject)
             .build();
+        GetItemResponse getItemResponse = GetItemResponse
+            .builder()
+            .item(
+                Map
+                    .ofEntries(
+                        Map.entry(SEQ_NUM, AttributeValue.builder().n("0").build()),
+                        Map.entry(SOURCE, AttributeValue.builder().m(Collections.emptyMap()).build())
+                    )
+            )
+            .build();
+        Mockito.when(dynamoDbClient.getItem(Mockito.any(GetItemRequest.class))).thenReturn(getItemResponse);
         ConditionalCheckFailedException conflictException = ConditionalCheckFailedException.builder().build();
         // throw conflict exception on first two times, return on third time (that never executes)
         Mockito
@@ -637,11 +713,7 @@ public class DDBOpenSearchClientTests extends OpenSearchTestCase {
                 Map.entry("testNumber", AttributeValue.builder().n("123").build()),
                 Map.entry("testBool", AttributeValue.builder().bool(true).build()),
                 Map.entry("testList", AttributeValue.builder().l(Arrays.asList(AttributeValue.builder().s("testString").build())).build()),
-                Map
-                    .entry(
-                        "testObject",
-                        AttributeValue.builder().m(ImmutableMap.of("data", AttributeValue.builder().s("foo").build())).build()
-                    )
+                Map.entry("testObject", AttributeValue.builder().m(Map.of("data", AttributeValue.builder().s("foo").build())).build())
             );
     }
 
